# gitfly-cpp

./: CMakeLists.txt  README.md
include/gitfly/: config.hpp  consts.hpp  diff.hpp  fs.hpp  hash.hpp  index.hpp  object_store.hpp  refs.hpp  remote.hpp  repo.hpp  status.hpp  tcp_remote.hpp  time.hpp  util.hpp  worktree.hpp
scripts/: complex_merge_conflicts.sh  mock_dir_for_testing.sh  run.sh  test_all.sh  test_remote_tcp.sh  tidy_all.sh
src/: config.cpp  diff.cpp  fs.cpp  hash_sha1.cpp  index.cpp  main.cpp  object_store.cpp  refs.cpp  remote.cpp  repo.cpp  status.cpp  tcp_remote.cpp  time.cpp  util.cpp  worktree.cpp
src/cli/: command.hpp  register_commands.cpp  registry.cpp  registry.hpp
src/cli/commands/: add.cpp  branch.cpp  checkout.cpp  clone.cpp  commit.cpp  diff.cpp  fetch.cpp  init.cpp  log.cpp  merge.cpp  pull.cpp  push.cpp  serve.cpp  status.cpp
tests/: branch_log.cpp  commit_from_index.cpp  diff_algo.cpp  index_write_tree.cpp  init.cpp  merge.cpp  merge_conflict.cpp  merge_fastforward.cpp  remote_fs.cpp  remote_pull.cpp  repository.cpp  status.cpp
